--- a/WebAppNoAuth/WebAppNoAuth.csproj
+++ b/WebAppNoAuth/WebAppNoAuth.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
   </ItemGroup>
 
 </Project>
