--- a/WebAppNoAuth/WebAppNoAuth.csproj
+++ b/WebAppNoAuth/WebAppNoAuth.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="2.1.175" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8" />
   </ItemGroup>
 
 </Project>
