--- a/WebAppNoAuth/appsettings.json
+++ b/WebAppNoAuth/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=webapp_db;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJWTAuthentication12345!",
+    "Issuer": "WebAppNoAuth",
+    "Audience": "WebAppNoAuthUsers",
+    "ExpireMinutes": 60
   }
 }
