moved some config params to user-secrets

--- a/WebAppNoAuth/appsettings.json
+++ b/WebAppNoAuth/appsettings.json
@@ -7,10 +7,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=webapp_db;Username=postgres;Password=postgres"
+    "DefaultConnection": ""
   },
   "Jwt": {
-    "Key": "ThisIsASecretKeyForJWTAuthentication12345!",
+    "Key": "",
     "Issuer": "WebAppNoAuth",
     "Audience": "WebAppNoAuthUsers",
     "ExpireMinutes": 60
