--- a/WebAppNoAuth/WebAppNoAuth.csproj
+++ b/WebAppNoAuth/WebAppNoAuth.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <UserSecretsId>65a12627-eb50-4b91-9da4-3fbb544f62ee</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
